Tests/Resources/Bad/ERROR_NOT_A_RECORD/bool_is_not_a_record.st
language core;
extend with #records;

fn main(n : Bool) -> Nat {
  return false.field
}
